:fire: :hammer: :boom: remove `z-index` from `lyt-main` to fix common z-index problems

--- a/src/objects/_layout.scss
+++ b/src/objects/_layout.scss
@@ -32,7 +32,6 @@
   //
   .lyt-main {
     @extend %position-relative;
-    z-index: $main-zindex;
     background: $main-background;
   }
 
